--- a/core/ui/src/main/res/values/attrs.xml
+++ b/core/ui/src/main/res/values/attrs.xml
@@ -1,8 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <declare-styleable name="EmptyStateRecyclerView">
         <attr name="emptyStateSubtitle" format="string" />
         <attr name="emptyStateTitle" format="string" />
         <attr name="emptyStateButtonTitle" format="string" />
+    </declare-styleable>
+
+    <declare-styleable name="PosterView">
+        <attr name="placeholder" format="reference" />
+        <attr name="rating" format="string" />
+        <attr name="imageSrc" format="string" />
+        <attr name="title" format="string" />
+        <attr name="titleColor" format="color" />
+        <attr name="titleSize" format="dimension" />
+        <attr name="titlePosterStyle" format="enum">
+            <enum name="normal" value="0" />
+            <enum name="bold" value="1" />
+            <enum name="italic" value="2" />
+            <enum name="bold_italic" value="3" />
+        </attr>
+        <attr name="ratingColor" format="color" />
+        <attr name="ratingSize" format="dimension" />
+        <attr name="ratingStyle" format="enum">
+            <enum name="normal" value="0" />
+            <enum name="bold" value="1" />
+            <enum name="italic" value="2" />
+            <enum name="bold_italic" value="3" />
+        </attr>
+        <attr name="posterRadius" format="dimension" />
+        <attr name="ratingRadius" format="dimension" />
+    </declare-styleable>
+
+    <declare-styleable name="LinearInfoView">
+        <attr name="title" format="string" />
+        <attr name="textTitleStyle" format="enum">
+            <enum name="normal" value="0" />
+            <enum name="bold" value="1" />
+            <enum name="italic" value="2" />
+            <enum name="bold_italic" value="3" />
+        </attr>
+        <attr name="textValueStyle" format="enum">
+            <enum name="normal" value="0" />
+            <enum name="bold" value="1" />
+            <enum name="italic" value="2" />
+            <enum name="bold_italic" value="3" />
+        </attr>
+        <attr name="value" format="string" />
+        <attr name="hideIfValueEmpty" format="boolean" />
+        <attr name="textColor" format="color" />
+        <attr name="textSize" format="dimension" />
+    </declare-styleable>
+
+    <declare-styleable name="HorizontalChipView">
+        <attr name="title" format="string" />
+        <attr name="titleColor" format="color" />
+        <attr name="titleSize" format="dimension" />
+        <attr name="titleStyle" format="enum">
+            <enum name="normal" value="0" />
+            <enum name="bold" value="1" />
+            <enum name="italic" value="2" />
+            <enum name="bold_italic" value="3" />
+        </attr>
+        <attr name="titleTypeface" format="string" />
+        <attr name="requireSelection" format="boolean"/>
+        <attr name="singleCheck" format="boolean"/>
+        <attr name="selectedChipId" format="reference"/>
+        <attr name="chipStyle" format="reference"/>
     </declare-styleable>
 </resources>
