--- a/core/ui/src/main/res/layout/layout_poster_view.xml
+++ b/core/ui/src/main/res/layout/layout_poster_view.xml
@@ -19,7 +19,7 @@
             android:layout_below="@id/poster"
             android:layout_marginTop="5dp"
             android:maxLines="2"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             tools:text="Movie Title" />
