refactor: Corrected section names and improved dimensions

--- a/feature/home/src/main/res/layout/list_item_media_small.xml
+++ b/feature/home/src/main/res/layout/list_item_media_small.xml
@@ -13,9 +13,10 @@
         android:id="@+id/poster"
         android:layout_width="100dp"
         android:layout_height="150dp"
+        android:layout_marginEnd="10dp"
         app:imageSrc="@{media.completePosterPathW780}"
         app:placeholder="@drawable/ic_image_placeholder"
-        app:posterRadius="@dimen/base_corner_radius"
+        app:posterRadius="10dp"
         app:rating="@{media.voteAverageAsString}"
         app:ratingRadius="@dimen/base_corner_radius"
         app:title="@{media.mediaName}"
