--- a/feature/home/src/main/res/layout/layout_person_avatar.xml
+++ b/feature/home/src/main/res/layout/layout_person_avatar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -9,14 +9,15 @@
             type="String" />
     </data>
 
-    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/cardView"
         android:layout_width="80dp"
+        android:clickable="true"
         android:layout_height="80dp"
         android:elevation="4dp"
-        app:cardCornerRadius="50dp">
+        app:cardCornerRadius="50dp"
+        android:focusable="true">
 
         <ImageView
             android:id="@+id/ivAvatar"
