--- a/feature/home/src/main/res/layout/list_item_section.xml
+++ b/feature/home/src/main/res/layout/list_item_section.xml
@@ -37,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal"
                 android:paddingStart="10dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -46,10 +47,10 @@
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/progress"
             android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:indeterminate="true"
-            app:indicatorColor="@color/vermilion_100"/>
+            app:indicatorColor="@color/vermilion_100" />
 
 
     </RelativeLayout>
