--- a/core/ui/src/main/res/layout/view_empty_state.xml
+++ b/core/ui/src/main/res/layout/view_empty_state.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -17,33 +18,35 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:elevation="4dp"
-            android:src="@drawable/baseline_blind_24" />
+            android:src="@drawable/baseline_blind_24"
+            app:tint="?attr/colorOnSecondary" />
 
         <TextView
             android:id="@+id/tvEmptyStateTitle"
+            style="@style/SmallTitleTextViewStyle"
             android:layout_width="wrap_content"
-            android:textColor="@color/alabaster"
             android:layout_height="wrap_content"
-            tools:text="Empty Title"
             android:visibility="gone"
-            tools:visibility="visible"/>
+            tools:text="Empty Title"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/tvEmptyStateSubtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Empty Subtitle"
-            android:textColor="@color/alabaster"
-            tools:visibility="visible"
-            android:visibility="gone"/>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnEmptyState"
+            style="@style/BodyTextViewStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            tools:visibility="visible"
-            tools:text="Empty Button" />
+            tools:text="Empty Subtitle"
+            tools:visibility="visible" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnEmptyState"
+            style="@style/PrimaryCustomMaterialButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:text="Empty Button"
+            tools:visibility="visible" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
