--- a/core/ui/src/main/res/values/themes.xml
+++ b/core/ui/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.CineMates" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
@@ -14,11 +14,11 @@
         <item name="android:statusBarColor">@color/lynch_100</item>
         <item name="android:navigationBarColor">@color/lynch_100</item>
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@color/mirage_100</item>
+        <item name="android:windowBackground">?colorPrimary</item>
         <!-- Apply default style for dialogs -->
         <item name="android:dialogTheme">@style/AppDialogTheme</item>
-        <item name="android:textColorHint">@color/geyser</item>
-        <item name="android:editTextColor">@color/white</item>
+        <item name="android:textColorHint">?colorOnSecondary</item>
+        <item name="android:editTextColor">?colorOnSecondary</item>
         <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>
         <item name="materialAlertDialogTheme">@style/AppDialogTheme</item>
     </style>
@@ -26,66 +26,78 @@
     <!-- TabLayout Style-->
     <style name="Tab_Layout_Small" parent="Widget.MaterialComponents.TabLayout">
         <item name="tabIndicator">@drawable/tab_indicator</item>
-        <item name="tabIndicatorColor">@color/vermilion_100</item>
-        <item name="tabSelectedTextColor">@color/vermilion_100</item>
+        <item name="tabIndicatorColor">?colorAccent</item>
+        <item name="tabSelectedTextColor">?colorAccent</item>
         <item name="tabMode">auto</item>
-        <item name="android:background">@color/lynch_100</item>
-        <item name="tabTextAppearance">@style/MyCustomTextAppearanceSmallTab</item>
+        <item name="android:background">?colorSecondary</item>
+        <item name="tabTextAppearance">@style/CustomTextTabSmallAppearance</item>
         <item name="tabIndicatorFullWidth">false</item>
         <item name="tabGravity">center</item>
-        <item name="tabTextColor">@color/geyser</item>
+        <item name="tabTextColor">?colorOnSecondary</item>
     </style>
 
     <style name="Tab_Layout_Huge" parent="Widget.MaterialComponents.TabLayout">
         <item name="tabIndicatorColor">@android:color/transparent</item>
         <item name="tabIndicatorHeight">0dp</item>
-        <item name="tabSelectedTextColor">@color/alabaster</item>
+        <item name="tabSelectedTextColor">?colorOnPrimary</item>
         <item name="tabMode">scrollable</item>
-        <item name="android:background">@color/lynch_100</item>
-        <item name="tabTextAppearance">@style/MyCustomTextAppearance</item>
-        <item name="tabTextColor">@color/geyser</item>
+        <item name="android:background">?colorAccent</item>
+        <item name="tabTextAppearance">@style/CustomTextTabBigAppearance</item>
+        <item name="tabTextColor">?colorOnSecondary</item>
     </style>
 
-    <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+    <style name="CustomTextTabBigAppearance" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">32sp</item>
         <item name="android:textStyle">normal</item>
     </style>
 
-    <style name="MyCustomTextAppearanceSmallTab" parent="MyCustomTextAppearance">
+    <style name="CustomTextTabSmallAppearance" parent="CustomTextTabBigAppearance">
         <item name="android:textSize">16sp</item>
     </style>
     <!--  Fine TabLayout Style-->
 
-    <style name="item_title_style">
-        <item name="android:textColor">@color/alabaster</item>
-        <item name="android:textSize">14sp</item>
+    <style name="HugeTitleTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="SmallTitleTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="BodyTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <!-- Define your custom dialog theme here extending from base -->
     <style name="AppDialogTheme" parent="Theme.MaterialComponents.Dialog.Alert">
         <!-- Define color properties as desired -->
-        <item name="colorPrimary">@color/lynch_100</item>
-        <item name="colorPrimaryDark">@color/mirage_100</item>
+        <item name="colorPrimary">?colorPrimary</item>
+        <item name="colorPrimaryDark">?colorPrimaryDark</item>
         <item name="android:textColorHighlight">@color/royal_blue_100</item>
-        <item name="colorAccent">@color/vermilion_100</item>
-        <item name="colorControlNormal">@color/alabaster</item>
+        <item name="colorAccent">?colorAccent</item>
+        <item name="colorControlNormal">?colorOnPrimary</item>
         <item name="buttonBarButtonStyle">@style/DialogButtonStyle</item>
         <item name="android:textSize">14sp</item>
         <!-- Define window properties as desired -->
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">false</item>
-        <item name="android:background">@color/lynch_100</item>
+        <item name="android:background">?colorSecondary</item>
         <item name="android:windowIsFloating">true</item>
         <item name="buttonBarPositiveButtonStyle">@style/Alert.Button.Positive</item>
         <item name="android:windowCloseOnTouchOutside">true</item>
     </style>
 
     <style name="Alert.Button.Positive" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="rippleColor">@color/vermilion_100</item>
-        <item name="android:textColor">@color/alabaster</item>
+        <item name="rippleColor">?colorAccent</item>
+        <item name="android:textColor">?colorOnPrimary</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
     </style>
@@ -97,7 +109,7 @@
 
     <style name="CustomBottomSheet" parent="Widget.MaterialComponents.BottomSheet">
         <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceBottomSheetDialog</item>
-        <item name="android:backgroundTint">@color/lynch_100</item>
+        <item name="android:backgroundTint">?colorSecondary</item>
     </style>
 
     <style name="CustomShapeAppearanceBottomSheetDialog" parent="">
@@ -110,7 +122,7 @@
 
     <!-- Define your custom alert theme here extending from base -->
     <style name="DialogButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="android:textColor">@color/vermilion_100</item>
+        <item name="android:textColor">?colorAccent</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
@@ -146,7 +158,27 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="PrimaryCustomMaterialButtonStyle" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textAllCaps">false</item> <!-- Set textAllCaps to true or false -->
+        <item name="android:textStyle">normal
+        </item> <!-- Set textStyle to normal, bold, italic, etc. -->
+        <item name="android:textSize">16sp</item> <!-- Set textSize to your desired size -->
+        <item name="android:textColor">?colorOnPrimary
+        </item> <!-- Set textSize to your desired size -->
+        <item name="android:backgroundTint">?colorAccent
+        </item> <!-- Set backgroundTint to your desired color -->
+    </style>
 
+
+    <style name="SecondaryCustomMaterialButtonStyle" parent="@style/Widget.MaterialComponents.Button">
+        <item name="android:textAllCaps">false</item> <!-- Set textAllCaps to true or false -->
+        <item name="android:textStyle">normal
+        </item> <!-- Set textStyle to normal, bold, italic, etc. -->
+        <item name="android:textSize">16sp</item> <!-- Set textSize to your desired size -->
+        <item name="android:textColor">?colorOnSecondary
+        </item> <!-- Set textSize to your desired size -->
+        <item name="android:backgroundTint">?colorPrimary</item>
+    </style>
 
 
 </resources>
