--- a/feature/home/src/main/res/layout/layout_person_avatar.xml
+++ b/feature/home/src/main/res/layout/layout_person_avatar.xml
@@ -23,7 +23,7 @@
             android:id="@+id/ivAvatar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/geyser"
+            android:background="?attr/colorOnSecondary"
             android:scaleType="centerCrop"
             app:loadImage="@{path}"
             tools:src="@tools:sample/avatars" />
