--- a/feature/home/src/main/res/layout/list_item_section.xml
+++ b/feature/home/src/main/res/layout/list_item_section.xml
@@ -24,12 +24,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
+                style="@style/HugeTitleTextViewStyle"
                 android:paddingStart="10dp"
                 android:paddingTop="10dp"
-                android:textColor="@color/alabaster"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:drawableTint="@color/alabaster"
                 tools:text="@tools:sample/first_names" />
 
             <com.indisparte.ui.custom_view.EmptyStateRecyclerView
@@ -50,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:indeterminate="true"
-            app:indicatorColor="@color/vermilion_100" />
+            app:indicatorColor="?attr/colorAccent" />
 
 
     </RelativeLayout>
