--- a/core/ui/src/main/res/layout/layout_poster.xml
+++ b/core/ui/src/main/res/layout/layout_poster.xml
@@ -2,19 +2,17 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="100dp"
-    android:layout_height="150dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
     tools:showIn="@layout/layout_poster_view">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:background="?attr/colorOnSecondary"
-        android:backgroundTint="?attr/colorOnSecondary"
+        android:layout_width="120dp"
+        android:layout_height="170dp"
+        android:scaleType="center"
         tools:src="@tools:sample/backgrounds/scenic"
         android:contentDescription="Poster image" />
 </androidx.cardview.widget.CardView>
