feat: Initialized the fragments and made corrections to entities by adding formatted attributes

--- a/feature/movie_details/src/main/res/layout/fragment_manage_bottomsheet.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_manage_bottomsheet.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
 
     <data>
 
         <variable
             name="movie"
-            type="com.example.cinemates.domain.model.movie.Movie" />
+            type="com.indisparte.model.entity.Movie" />
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
