--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -49,7 +49,7 @@
     </fragment>
     <dialog
         android:id="@+id/bottomSheetFragment"
-        android:name="com.example.cinemates.ui.details.movie.ManageBottomSheetFragment"
+        android:name="com.indisparte.movie_details.ManageBottomSheetFragment"
         android:label="BottomSheetFragment"
         tools:layout="@layout/fragment_manage_bottomsheet" />
     <fragment
@@ -75,7 +75,7 @@
     </fragment>
     <fragment
         android:id="@+id/movieDetailsFragment"
-        android:name="com.example.cinemates.ui.details.movie.MovieDetailsContainerFragment"
+        android:name="com.indisparte.movie_details.MovieDetailsContainerFragment"
         android:label="MovieDetailsFragment"
         tools:layout="@layout/fragment_media_details">
         <argument
