--- a/feature/movie_details/src/main/res/layout/layout_movie_info.xml
+++ b/feature/movie_details/src/main/res/layout/layout_movie_info.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="movie"
-            type="com.example.cinemates.domain.model.movie.Movie" />
+            type="com.indisparte.model.entity.MovieDetails" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
@@ -25,7 +25,7 @@
             android:textStyle="bold" />
 
 
-        <com.indisparte.linearlayoutinfo.LinearLayoutInfoView
+        <com.indisparte.ui.custom_view.LinearLayoutInfoView
             android:id="@+id/originalTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
             app:title="Original title"
             app:value="@{movie.originalTitle}" />
 
-        <com.indisparte.linearlayoutinfo.LinearLayoutInfoView
+        <com.indisparte.ui.custom_view.LinearLayoutInfoView
             android:id="@+id/status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
             app:title="Status"
             app:value="@{movie.status}" />
 
-        <com.indisparte.linearlayoutinfo.LinearLayoutInfoView
+        <com.indisparte.ui.custom_view.LinearLayoutInfoView
             android:id="@+id/runtime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,9 +56,9 @@
             app:textSize="14sp"
             app:textColor="@color/alabaster"
             app:title="Runtime"
-            app:value="@{movie.runtime}" />
+            app:value="@{movie.formattedRuntime}" />
 
-        <com.indisparte.linearlayoutinfo.LinearLayoutInfoView
+        <com.indisparte.ui.custom_view.LinearLayoutInfoView
             android:id="@+id/originalLanguage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
             app:title="Original language"
             app:value="@{movie.originalLanguage}" />
 
-        <com.indisparte.linearlayoutinfo.LinearLayoutInfoView
+        <com.indisparte.ui.custom_view.LinearLayoutInfoView
             android:id="@+id/budget"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -78,9 +78,9 @@
             app:textSize="14sp"
             app:textColor="@color/alabaster"
             app:title="Budget"
-            app:value="@{movie.budget}" />
+            app:value="@{movie.formattedBudget}" />
 
-        <com.indisparte.linearlayoutinfo.LinearLayoutInfoView
+        <com.indisparte.ui.custom_view.LinearLayoutInfoView
             android:id="@+id/revenue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
             app:textColor="@color/alabaster"
             app:textSize="14sp"
             app:title="Revenue"
-            app:value="@{movie.revenue}" />
+            app:value="@{movie.formattedRevenue}" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
