feat: Implemented navigation between modules

--- a/feature/movie_details/src/main/res/layout/fragment_media_details.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_media_details.xml
@@ -98,6 +98,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
+                    app:navigationIcon="@drawable/ic_back_arrow"
                     android:layout_marginBottom="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
                     app:title="@{media.mediaName}" />
