--- a/core/navigation/src/main/res/navigation/movie_details_graph.xml
+++ b/core/navigation/src/main/res/navigation/movie_details_graph.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph"
-    app:startDestination="@id/home_graph">
+    android:id="@id/movie_details_graph">
 
-    <include app:graph="@navigation/home_graph"/>
 </navigation>
